# tenra-guardrail

./: .gitignore  README.md  justfile  osv-scanner.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: secret-scan.yml  tooling-security.yml  validation.yml
apps/desktopapp/: index.html  package.json
apps/desktopapp/src/: App.tsx  formatters.ts  guardrailData.ts  styles.css
apps/desktopapp/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
apps/desktopapp/src-tauri/capabilities/: default.json
apps/desktopapp/src-tauri/src/: lib.rs
apps/desktopapp/src-tauri/src/policy/: evaluator.rs
apps/desktopapp/src-tauri/src/runtime/: service.rs
apps/desktopapp/src-tauri/src/tool_host/: denial.rs  host.rs
apps/desktopapp/src/components/: HeroStatus.tsx  RuntimeDiagnosticsPanel.tsx  Sidebar.tsx  StaticPanels.tsx  SuiteClientsPanel.tsx  UiPrimitives.tsx
apps/desktopapp/src/hooks/: useExternalReviewQueue.ts  useRuntimeBoundary.ts
apps/mobileapp/: app.json
apps/mobileapp/scripts/: check-placeholder.mjs  dev-placeholder.mjs
apps/webapp/: vite.config.ts
apps/webapp/src/: App.tsx  external-review-api.ts  reviewApi.ts  reviewTypes.ts  styles.css
docs/: DEVELOPER_GUIDE.md  HANDOFFS.md  MODULE_MANIFEST.md  REPO_MAP.md  STABILITY_CHECKLIST.md  SUITE_HANDOFF_STANDARD.md
scripts/: analyze-build.mjs  audit-maintainability.mjs  dev-desktop.sh  dev-mobile.sh  dev-web.sh  doctor.sh  install-desktop-app.sh  maintainability.config.json  verify-mobile.sh  verify-web.sh
scripts/contracts/: maintainability-contracts.json
(+12 files in other folders)
