[package]
name = "guardrail-desktopapp"
version = "0.1.0"
description = "tenra Guardrail desktop shell and runtime scaffold"
authors = ["tenra"]
license = "UNLICENSED"
edition = "2021"

[lib]
name = "guardrail_desktopapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
